New styles to header and slideshow

--- a/index.html
+++ b/index.html
@@ -33,10 +33,58 @@
         </header>
 
         <aside class="slideshow slideshow_simple-theme">
-            <ul class="slideshow__slides slideshow__slides_simple-theme">
-                <li class="slideshow__slide slideshow__slide_simple-theme slideshow__slide_show">Pink</li>
-                <li class="slideshow__slide slideshow__slide_simple-theme">Orange</li>
-            </ul>
+            <div class="slideshow__slides slideshow__slides_simple-theme">
+                <div class="slideshow__slide slideshow__slide_simple-theme slideshow__slide_show slide slide_simple-theme">
+                    <div class="slide__img-container slide__img-container_simple-theme">
+                        <img class="slide__img slide__img_simple-theme" src="./img/trainer-with-hands-on-sides.png" alt="trainer-with-hands-on-sides">
+                    </div>
+                    <div class="slide__info-container slide__info-container_simple-theme">
+                        <p class="slide__title slide__title_simple-theme">
+                            Помогу Вашему телу за 3 месяца стать таким, каким Вы всегда мечтали его увидеть.
+                        </p>
+                        <ul class="slide__ul slide__ul_simple-theme">
+                            <li class="slide__li slide__li_simple-theme">
+                                налажу рацион питания
+                            </li>
+                            <li class="slide__li slide__li_simple-theme">
+                                проведу тренировки на все группы мышц
+                            </li>
+                            <li class="slide__li slide__li_simple-theme">
+                                научу самостоятельным техникам ухода за телом
+                            </li>
+                            <li class="slide__li slide__li_simple-theme">
+                                избавлю Ваше тело от стресса при помощи древнекитайских методик
+                            </li> 
+                        </ul>
+                    </div>
+                </div>
+                <div class="slideshow__slide slideshow__slide_simple-theme slideshow__slide_show slide slide_simple-theme">
+                    <div class="slide__img-container slide__img-container_simple-theme">
+                        <img class="slide__img slide__img_simple-theme" src="./img/trainer-with-apple.png" alt="trainer-with-apple">
+                    </div>
+                    <div class="slide__info-container slide__info-container_simple-theme">
+                        <p class="slide__title slide__title_simple-theme">
+                            Верну телу здоровье и молодость за 3 программы, которые подарят Вам полноценную жизнь, 
+                            с её эмоциями, счастьем и приключениями!
+                        </p>
+                        <ul class="slide__ul slide__ul_simple-theme">
+                            <li class="slide__li slide__li_simple-theme">
+                                налажу рацион питания
+                            </li>
+                            <li class="slide__li slide__li_simple-theme">
+                                проведу тренировки на все группы мышц
+                            </li>
+                            <li class="slide__li slide__li_simple-theme">
+                                научу самостоятельным техникам ухода за телом
+                            </li>
+                            <li class="slide__li slide__li_simple-theme">
+                                избавлю Ваше тело от стресса при помощи древнекитайских методик
+                            </li> 
+                        </ul>
+                    </div>
+                    
+                </div>
+            </div>
         </aside>
 
     </div>
